--- a/Project/src/ShoppingMenu/PT.form
+++ b/Project/src/ShoppingMenu/PT.form
@@ -286,7 +286,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lb_sumprice">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jLabel2"/>
+            <Property name="text" type="java.lang.String" value="0"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
